// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTALink Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--gray CTA--default"
>
  <smart-link-stub
    class="CTA-link"
    to="cta"
  >
    <div
      class="CTA-icon"
    >
      http://google.com
    </div>
     
    <p
      class="CTA-title"
    >
      cta title
    </p>
  </smart-link-stub>
</div>
`;

exports[`CTALink Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--brown CTA--default"
>
  <smart-link-stub
    class="CTA-link"
    to="cta"
  >
    <div
      class="CTA-icon"
    >
      http://google.com
    </div>
     
    <p
      class="CTA-title"
    >
      cta title
    </p>
  </smart-link-stub>
</div>
`;
